syntax = "proto3";

package org.azurecloud.solutions.shared.props;

option java_multiple_files = true;
option java_package = "org.azurecloud.solutions.shared.props";
option java_outer_classname = "ConfigurationProto";

service ConfigurationService {
  rpc GetConfiguration(GetConfigurationRequest) returns (GetConfigurationResponse);
  rpc UpdateConfiguration(UpdateConfigurationRequest) returns (UpdateConfigurationResponse);
}

message GetConfigurationRequest {
  string key = 1;
  string application = 2;
  string profile = 3;
  string label = 4;
}

message GetConfigurationResponse {
  string key = 1;
  string value = 2;
  string application = 3;
  string profile = 4;
  string label = 5;
}

message UpdateConfigurationRequest {
  string key = 1;
  string value = 2;
  string application = 3;
  string profile = 4;
  string label = 5;
}

message UpdateConfigurationResponse {
  string key = 1;
  string value = 2;
  string application = 3;
  string profile = 4;
  string label = 5;
}
